--- a/ui.css
+++ b/ui.css
@@ -7,6 +7,7 @@
 
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -171,4 +172,11 @@ body{
     text-transform: uppercase;
     font-weight: 500;
     color: #4ba9e9;
+}
+body h1{
+   margin-bottom: 50px;
+   color: lightgray;
+   font-family: Arial,;
+   margin-right: 5%;
+  
 }
